--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
     <link rel="icon" type="image/svg+xml" href="/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>team-zemo</title>
+    <!-- PRIMARY SEO -->
+    <title>Team Zemo | AI Infrastructure & Security Innovators</title>
+    <meta name="description" content="Team Zemo builds advanced AI infrastructure, realtime security engines, and computer vision systems. Creators of Omninet Core, Aeigies, and Swayog." />
+    <meta name="keywords" content="Team Zemo, AI, Software Engineering, Omninet, Aeigies, Swayog, Computer Vision, Cybersecurity" />
+    <meta name="author" content="Team Zemo" />
+    <link rel="canonical" href="https://teamzemo.tech/" />
+
+    <!-- OPEN GRAPH / FACEBOOK / LINKEDIN -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://teamzemo.tech/" />
+    <meta property="og:title" content="Team Zemo | AI Infrastructure & Security" />
+    <meta property="og:description" content="Building the future of AI infrastructure. Explore our projects: Omninet Core, Aeigies, and Swayog." />
+    <meta property="og:image" content="https://teamzemo.tech/og-image.jpg" />
+
+    <!-- TWITTER -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://teamzemo.tech/" />
+    <meta property="twitter:title" content="Team Zemo | AI Infrastructure & Security" />
+    <meta property="twitter:description" content="Building the future of AI infrastructure. Explore our projects: Omninet Core, Aeigies, and Swayog." />
+    <meta property="twitter:image" content="https://teamzemo.tech/og-image.jpg" />
   </head>
   <body>
     <div id="root"></div>
